<resources>
    <string name="app_name">Registration App</string>
    <string name="hello">Hello!</string>
    <string name="sign_in_to_your_account">Sign In to your account</string>
    <string name="email">E-mail</string>
    <string name="passvord">Passvord</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="log_in">Log in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create Account</string>
    <string name="age">age</string>
    <string name="gender">Gender</string>
</resources>