<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/actor"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="70sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="top"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_bg"
        android:elevation="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:src="@drawable/person" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="25"
            android:background="@color/white"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        app:hintEnabled="false"
        android:background="@drawable/edit_bg"
        android:elevation="10dp"
        app:boxBackgroundMode="none"
        app:boxStrokeColor="@android:color/transparent"
        android:baselineAligned="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:hint="dfdsf"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_baseline_lock_24" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textSize="18sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/actor"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@color/button_color"
        app:cornerRadius="60dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/textCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="5dp"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>