<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/textUserNameCreate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_bg"
        android:elevation="10dp"
        android:hint="@string/user_name"
        android:textSize="16dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        app:drawableStartCompat="@drawable/person" />

<EditText
    android:id="@+id/textAge"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_bg"
        android:elevation="10dp"
        android:hint="@string/age"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        app:drawableStartCompat="@drawable/person" />

<EditText
        android:id="@+id/textGender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_bg"
        android:elevation="10dp"
        android:hint="@string/gender"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        app:drawableStartCompat="@drawable/person" />

<EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_bg"
        android:elevation="10dp"
        android:hint="@string/user_name"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        app:drawableStartCompat="@drawable/person" />
    <EditText
        android:id="@+id/createPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_bg"
        android:elevation="10dp"
        android:hint="@string/passvord"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        app:drawableStartCompat="@drawable/person" />
    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_bg"
        android:elevation="10dp"
        android:hint="@string/user_name"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="14dp"
        app:drawableStartCompat="@drawable/person" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="40dp"
        android:elevation="10dp"
        android:fontFamily="@font/actor"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/create_account"
        android:textSize="18sp"
        app:backgroundTint="@color/button_color"
        app:cornerRadius="60dp" />

    <ImageView
        android:id="@+id/exitImg"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="35dp"
        android:elevation="10dp"
        android:src="@drawable/backspace" />


</LinearLayout>